# books

./: .gitignore  README.md  pyproject.toml
books/: __init__.py  __main__.py
books/application/: config.py  container.py
books/domain/: data_repository.py  feature_builder.py  inference_service.py  model.py  model_builder.py  model_regsitry.py  preprocessor.py  repository.py  training_service.py
books/domain/entities/: review.py  sentiment.py
books/domain/model_builders/: xgboost_model_builder.py
books/domain/models/: xgboost_model.py
books/infrastructure/: jsonl_file_review_repository.py
books/infrastructure/model_registries/: mlflow_model_regsitry.py
books/infrastructure/repositories/: file_model_repository.py
tests/: __init__.py  conftest.py
tests/data/: Books_sample.jsonl
tests/domain/: conftest.py  test_feature_builder.py  test_inference_service.py  test_preprocessor.py  test_training_service.py
tests/domain/model_builders/: test_xgboost_model_builder.py
tests/domain/models/: test_xgboost_model.py
tests/infrastructure/: test_jsonl_file_review_repository.py
tests/infrastructure/model_registries/: test_mlflow_model_registry.py
tests/infrastructure/repositories/: test_jsonl_file_review_repository.py
