[project]
name = "books"
version = "0.1.0"
description = ""
authors = [
    {name = "Rory Wagstaff"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles (>=24.1.0,<25.0.0)",
    "aioitertools (>=0.12.0,<0.13.0)",
    "click (>=8.1.8,<9.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "mlflow (>=2.21.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "sentence-transformers[train] (>=4.0.2,<5.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
]

[project.optional-dependencies]
tests = ["pytest (>=8.3.5,<9.0.0)", "pytest-asyncio (>=0.26.0,<0.27.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
